test/ds/bad/syntax/m.py
# Just a bad python code (syntax error)
class -not-a-valid-code:
    pass
